--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,7 @@
-# Created by .ignore support plugin (hsz.mobi)
-### Example user template template
-### Example user template
-
-# IntelliJ project files
 .idea
 *.iml
 samples/
 test.py
 __pycache__/
 scripts/log/
+models/
