--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,11 @@
 *.iml
 samples/
 test.py
+
 __pycache__/
+modules/__pycache__/
+retrieval/__pycache__/
+
 scripts/log/
 models/
 scripts/tse.condor
